Fixed RTL alignment issues.
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@53205 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/extensions/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -8,7 +8,8 @@ form#editform {
 }
 body.rtl form#editform {
 	padding-right: 0;
-	margin-left: 5px;
+	margin-right: auto !important;
+	margin-left: 2px !important;
 }
 textarea#wpTextbox1 {
 	border: solid silver 1px;
@@ -44,6 +45,8 @@ div#edittoolbar div.sections div.section {
 }
 body.rtl div#edittoolbar div.sections div.section {
 	float: right;
+	margin-left: auto;
+	margin-right: -1px;
 }
 div#edittoolbar div.sections div.loading {
 	padding-top: 0.5em;
